[gd_scene load_steps=29 format=3 uid="uid://c316ek4x22v2p"]

[ext_resource type="Script" uid="uid://cigms1jlsw4t1" path="res://Scripts/Menu/Main/Main_Menu.gd" id="1_8bt37"]
[ext_resource type="FontFile" uid="uid://dh8b3n051ubbv" path="res://Sprites/Fonts/MainFont.TTF" id="2_t8dpg"]
[ext_resource type="Texture2D" uid="uid://c11h04f5p83ry" path="res://Sprites/Backgrounds/MainSpace_Background.png" id="3_21vot"]
[ext_resource type="AudioStream" uid="uid://egg81frtoxxt" path="res://audio/Tame Impala - Nangs (Original Instrumental).mp3" id="4_ec0ct"]
[ext_resource type="Script" uid="uid://m7286twvoog0" path="res://Scripts/audio_control.gd" id="5_m17uk"]
[ext_resource type="Script" uid="uid://b33wv112jwaoh" path="res://Scripts/Menu/Main/fullscreen_control.gd" id="6_dnggf"]
[ext_resource type="Script" uid="uid://b33kh6nsorqq5" path="res://Scripts/Menu/Main/armadietto.gd" id="7_jr8ar"]
[ext_resource type="Script" uid="uid://blniingo8w2rp" path="res://Scripts/AnimationsAddOn/MainMenuAnimations/ship_spawner.gd" id="8_0edrc"]
[ext_resource type="Script" uid="uid://c7jot6njhhrem" path="res://Scripts/Menu/Main/skin.gd" id="8_5dd4i"]
[ext_resource type="Texture2D" uid="uid://4w1bvcgvv88n" path="res://Sprites/Buttons/Button_enabled_3x.png" id="9_5pajh"]
[ext_resource type="Script" uid="uid://bphev5uy11o6" path="res://Scripts/Menu/Main/miglioramenti.gd" id="9_lgwnu"]
[ext_resource type="Texture2D" uid="uid://36bnpyemjad3" path="res://Sprites/Buttons/Button_disabled_3x.png" id="10_j7ex8"]
[ext_resource type="Texture2D" uid="uid://bx3pgdgf1rwwp" path="res://Sprites/Buttons/Button_enabled_spd.png" id="11_a8gd2"]
[ext_resource type="Texture2D" uid="uid://dygm058dn02aq" path="res://Sprites/Buttons/Button_disabled_spd.png" id="12_hstxw"]
[ext_resource type="Texture2D" uid="uid://0eswjr2f77r6" path="res://Sprites/Buttons/Bottone 2.png" id="13_8egab"]
[ext_resource type="Texture2D" uid="uid://bk8m7toqldnk2" path="res://Sprites/Buttons/Bottone 1.png" id="14_gw5y6"]
[ext_resource type="Texture2D" uid="uid://djn4upbon1o26" path="res://Sprites/Buttons/game1.png" id="17_hstxw"]
[ext_resource type="Texture2D" uid="uid://271bqqkgliq5" path="res://Sprites/Buttons/game2.png" id="18_8egab"]
[ext_resource type="Texture2D" uid="uid://dobsahcqhupdu" path="res://Sprites/Buttons/game3.png" id="19_gw5y6"]

[sub_resource type="Theme" id="Theme_lrj6p"]
default_font = ExtResource("2_t8dpg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wtbl3"]
texture = ExtResource("3_21vot")
modulate_color = Color(0.707967, 0.707967, 0.707967, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pcxhq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6pknk"]
bg_color = Color(0.0467422, 0.398286, 0.496106, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0m7l"]
bg_color = Color(0.0103343, 0.182604, 0.233814, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7it8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_svtp6"]
grow_begin = -300.0
grow_end = 300.0
thickness = 0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wt6vc"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_uxoih"]
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lrj6p")
script = ExtResource("1_8bt37")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wtbl3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -379.0
offset_top = 50.0
offset_right = 386.0
offset_bottom = 111.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 40
theme_override_fonts/font = ExtResource("2_t8dpg")
theme_override_font_sizes/font_size = 60
text = "Tempera Biscotti"

[node name="MoneteLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 114.0
offset_bottom = 17.0
text = "Stelle: 0"

[node name="MainButtons" type="VBoxContainer" parent="."]
light_mask = 2
visibility_layer = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.513
anchor_top = 0.486
anchor_right = 0.513
anchor_bottom = 0.486
offset_left = -189.976
offset_top = -79.928
offset_right = 159.024
offset_bottom = 80.072
grow_horizontal = 2
grow_vertical = 2

[node name="Button1" type="Button" parent="MainButtons"]
light_mask = 2
visibility_layer = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pcxhq")
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
text = "Gioca"

[node name="Button2" type="Button" parent="MainButtons"]
light_mask = 2
visibility_layer = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
text = "Armadietto"

[node name="Button3" type="Button" parent="MainButtons"]
light_mask = 2
visibility_layer = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
text = "Opzioni"

[node name="Selezione_modalità" type="Panel" parent="."]
layout_mode = 0
offset_left = 233.0
offset_top = 137.0
offset_right = 944.0
offset_bottom = 560.0

[node name="Label" type="Label" parent="Selezione_modalità"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -338.5
offset_top = 23.0
offset_right = 341.5
offset_bottom = 64.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Seleziona la modalita'"

[node name="Button" type="Button" parent="Selezione_modalità"]
layout_mode = 0
offset_left = 91.0
offset_top = 73.0
offset_right = 227.0
offset_bottom = 337.0
theme_override_icons/icon = ExtResource("17_hstxw")

[node name="Button2" type="Button" parent="Selezione_modalità"]
layout_mode = 0
offset_left = 288.0
offset_top = 73.0
offset_right = 427.0
offset_bottom = 337.0
theme_override_icons/icon = ExtResource("18_8egab")

[node name="Button3" type="Button" parent="Selezione_modalità"]
layout_mode = 0
offset_left = 477.0
offset_top = 72.0
offset_right = 625.0
offset_bottom = 336.0
theme_override_icons/icon = ExtResource("19_gw5y6")

[node name="Back" type="Button" parent="Selezione_modalità"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.513
anchor_bottom = 1.0
offset_left = -161.5
offset_top = -61.0
offset_right = 148.524
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
text = "Indietro"

[node name="Armadietto" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -158.0
offset_right = 224.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_jr8ar")

[node name="Label" type="Label" parent="Armadietto"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -141.0
offset_top = 23.0
offset_right = 181.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Armadietto"

[node name="Miglioramenti" type="Panel" parent="Armadietto"]
layout_mode = 0
offset_left = -3.0
offset_right = 425.0
offset_bottom = 311.0
script = ExtResource("9_lgwnu")

[node name="Upgrade1" type="CheckButton" parent="Armadietto/Miglioramenti"]
layout_mode = 0
offset_left = 43.0
offset_top = 81.0
offset_right = 183.0
offset_bottom = 217.0
theme_override_icons/checked = ExtResource("9_5pajh")
theme_override_icons/unchecked = ExtResource("10_j7ex8")
text = "
"

[node name="Upgrade2" type="CheckButton" parent="Armadietto/Miglioramenti"]
layout_mode = 0
offset_left = 246.0
offset_top = 81.0
offset_right = 386.0
offset_bottom = 217.0
theme_override_colors/icon_disabled_color = Color(0.996078, 0, 0, 1)
theme_override_icons/checked = ExtResource("11_a8gd2")
theme_override_icons/unchecked = ExtResource("12_hstxw")

[node name="Ritorno" type="Button" parent="Armadietto/Miglioramenti"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -174.0
offset_top = -76.0
offset_right = 151.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
text = "Indietro"

[node name="Label" type="Label" parent="Armadietto/Miglioramenti"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 23.0
offset_right = 162.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Miglioramenti"

[node name="Button" type="Button" parent="Armadietto/Miglioramenti"]
layout_mode = 0
offset_left = 49.0
offset_top = 84.0
offset_right = 177.0
offset_bottom = 213.0
theme_override_icons/icon = ExtResource("14_gw5y6")
theme_override_styles/normal = SubResource("StyleBoxLine_svtp6")

[node name="Button2" type="Button" parent="Armadietto/Miglioramenti"]
layout_mode = 0
offset_left = 251.0
offset_top = 85.0
offset_right = 379.0
offset_bottom = 214.0
theme_override_icons/icon = ExtResource("13_8egab")
theme_override_styles/normal = SubResource("StyleBoxLine_svtp6")

[node name="Skin" type="Panel" parent="Armadietto"]
layout_mode = 0
offset_left = -1.0
offset_right = 428.0
offset_bottom = 300.0
script = ExtResource("8_5dd4i")

[node name="Seleziona" type="Button" parent="Armadietto/Skin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = 1.0
offset_right = -41.5
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "Seleziona"

[node name="Seleziona2" type="Button" parent="Armadietto/Skin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 56.5
offset_top = 2.0
offset_right = 178.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
text = "Seleziona"

[node name="Ritorno" type="Button" parent="Armadietto/Skin"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -174.5
offset_top = -65.0
offset_right = 150.5
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
text = "Indietro"

[node name="Label" type="Label" parent="Armadietto/Skin"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -139.5
offset_top = 26.0
offset_right = 142.5
offset_bottom = 67.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Navicelle"

[node name="Upgrades" type="Button" parent="Armadietto"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 16.5
offset_top = -194.0
offset_right = 204.5
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
text = "Upgrades"

[node name="Costumi" type="Button" parent="Armadietto"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -195.5
offset_top = -193.0
offset_right = -13.5
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
text = "Costumi"

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -158.0
offset_right = 228.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -122.0
offset_right = 198.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Opzioni"
horizontal_alignment = 1

[node name="AudioControl" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 174.0
offset_top = 114.0
offset_right = 381.0
offset_bottom = 163.0
theme_override_styles/slider = SubResource("StyleBoxLine_wt6vc")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_uxoih")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_m17uk")
audio_bus_name = "Music"

[node name="FullscreenControl" type="CheckButton" parent="Options"]
layout_mode = 0
offset_left = 77.0
offset_top = 161.0
offset_right = 373.0
offset_bottom = 210.0
text = "Schermo intero
"
script = ExtResource("6_dnggf")

[node name="Label2" type="Label" parent="Options"]
layout_mode = 0
offset_left = 84.0
offset_top = 128.0
offset_right = 165.0
offset_bottom = 145.0
text = "Volume"

[node name="Back" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.513
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -248.0
offset_right = 148.024
offset_bottom = -206.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_6pknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0m7l")
theme_override_styles/normal = SubResource("StyleBoxFlat_d7it8")
text = "Indietro"

[node name="ShipSpawner" type="Node2D" parent="."]
script = ExtResource("8_0edrc")

[node name="Timer" type="Timer" parent="ShipSpawner"]
wait_time = 3.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ec0ct")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainButtons/Button1" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Button2" to="." method="_on_settings2_pressed"]
[connection signal="pressed" from="MainButtons/Button3" to="." method="_on_settings1_pressed"]
[connection signal="pressed" from="Selezione_modalità/Button" to="Selezione_modalità" method="_on_button_pressed"]
[connection signal="pressed" from="Selezione_modalità/Back" to="Selezione_modalità" method="_on_back_pressed"]
[connection signal="toggled" from="Armadietto/Miglioramenti/Upgrade1" to="Armadietto/Miglioramenti" method="_on_upgrade_1_toggled"]
[connection signal="toggled" from="Armadietto/Miglioramenti/Upgrade2" to="Armadietto/Miglioramenti" method="_on_upgrade_2_toggled"]
[connection signal="pressed" from="Armadietto/Miglioramenti/Ritorno" to="Armadietto/Miglioramenti" method="_on_ritorno_pressed"]
[connection signal="pressed" from="Armadietto/Miglioramenti/Button" to="Armadietto/Miglioramenti" method="_on_button_pressed"]
[connection signal="pressed" from="Armadietto/Miglioramenti/Button2" to="Armadietto/Miglioramenti" method="_on_button_2_pressed"]
[connection signal="toggled" from="Armadietto/Skin/Seleziona" to="Armadietto/Skin" method="_on_seleziona_toggled"]
[connection signal="toggled" from="Armadietto/Skin/Seleziona2" to="Armadietto/Skin" method="_on_seleziona_2_toggled"]
[connection signal="pressed" from="Armadietto/Skin/Ritorno" to="Armadietto/Skin" method="_on_back_options_pressed"]
[connection signal="pressed" from="Armadietto/Upgrades" to="Armadietto" method="_on_upgrades_pressed"]
[connection signal="pressed" from="Armadietto/Costumi" to="Armadietto" method="_on_costumi_pressed"]
[connection signal="value_changed" from="Options/AudioControl" to="Options/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/FullscreenControl" to="Options/FullscreenControl" method="_on_toggled"]
[connection signal="pressed" from="Back" to="." method="_on_back_options_pressed"]
